------------------------------------------
Added this plugin on 2015 Jan. 6, by yyin

------------------------------------------