@@ -2,3 +2,8 @@
 Added this plugin on 2015 Jan. 6, by yyin
 
 ------------------------------------------
+-------------------------------------------------------------------------------------------------------------------------
+2015-11-23 qiongli TDQ-11107  Display problem in the results of Numerical correlation analysis
+Extract class "ValueAggregator" from "DatasetUtils.calss" to plugin "org.talend.dataprofiler.service".
+ so that it can be called by these two plugins.
+--------------------------------------------------------------------------------------------------------------------------
